Fixed space between radio button and label (#8996)
* Fixed space between radio button and label
* Removed extra space from file name
* Fixed Inventory Path dropdown box alignment
* Clean code

--- a/web/html/src/branding/css/base/forms.less
+++ b/web/html/src/branding/css/base/forms.less
@@ -36,6 +36,10 @@ input[type="checkbox"] {
     padding-top: 8px;
     margin-bottom: 0;
     text-align: right;
+
+    input[type="radio"] {
+      margin-right: 5px;
+    }
   }
 
   .text {
